# terraform-ci

./: .dockerignore  .gitignore  .terraform.lock.hcl  Dockerfile  LICENSE  README.md  action.yml  main.py  main.sh  pyproject.toml  results_json.json  setup.py  tfplan.binary  tfplan.json  versions.tf
.github/workflows/: build.yaml
action/: __init__.py  __main__.py  config.py  parser.py  pipeline.py  terraform.py  utils.py
core/: Dockerfile  main.py
templates/: Apply.md  Plan.md
terraform_ci/: __init__.py  __main__.py  config.py  parser.py  pipeline.py  terraform.py
