[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=58", "setuptools_scm[toml]>=6.2"]

[project]
dependencies = ["awscli==1.27.*", "checkov==2.2.*", "pandas==1.5.*", "requests==2.28.*", "pydantic==1.10.*"]
description = 'Terraform CI Action'
dynamic = ["version"]
name = "terraform_ci"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["terraform_ci"]
